# CS1400-FInal-Project

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main  main.cpp
main.dSYM/Contents/Resources/DWARF/: main
main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/: Game.cpp  Game.hpp  GamePiece.cpp  GamePiece.hpp  Shape.cpp  Shape.hpp  Square.cpp  Square.hpp  Triangle.cpp  Triangle.hpp  main.cpp
